# reqwest

./: Cargo.toml
examples/wasm_github_fetch/: Cargo.toml
src/: lib.rs
tests/: brotli.rs  client.rs  deflate.rs  gzip.rs  proxy.rs  redirect.rs  retry.rs  wasm_simple.rs  zstd.rs
