[package]
name = "wasm"
version = "0.1.0"
authors = ["John Gallagher <john.willis.gallagher@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

# Config mostly pulled from: https://github.com/rustwasm/wasm-bindgen/blob/master/examples/fetch/Cargo.toml

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { path = "../../", version = "0.13.2" }
serde = { workspace = true, features = ["derive"] }
wasm-bindgen-futures = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"]  }
